Enjoy toooting! This version includes following improvements and fixes:
- Added Basque language