@@ -14,6 +14,7 @@ import ja from './ja'
 import ko from './ko'
 import nl from './nl'
 import no from './no'
+import pl from './pl'
 import pt_BR from './pt_BR'
 import sv from './sv'
 import uk from './uk'
@@ -37,6 +38,7 @@ import '@formatjs/intl-pluralrules/locale-data/ja'
 import '@formatjs/intl-pluralrules/locale-data/ko'
 import '@formatjs/intl-pluralrules/locale-data/nl'
 import '@formatjs/intl-pluralrules/locale-data/no'
+import '@formatjs/intl-pluralrules/locale-data/pl'
 import '@formatjs/intl-pluralrules/locale-data/pt'
 import '@formatjs/intl-pluralrules/locale-data/sv'
 import '@formatjs/intl-pluralrules/locale-data/uk'
@@ -56,6 +58,7 @@ import '@formatjs/intl-numberformat/locale-data/ja'
 import '@formatjs/intl-numberformat/locale-data/ko'
 import '@formatjs/intl-numberformat/locale-data/nl'
 import '@formatjs/intl-numberformat/locale-data/no'
+import '@formatjs/intl-numberformat/locale-data/pl'
 import '@formatjs/intl-numberformat/locale-data/pt'
 import '@formatjs/intl-numberformat/locale-data/sv'
 import '@formatjs/intl-numberformat/locale-data/uk'
@@ -77,6 +80,7 @@ import '@formatjs/intl-datetimeformat/locale-data/ja'
 import '@formatjs/intl-datetimeformat/locale-data/ko'
 import '@formatjs/intl-datetimeformat/locale-data/nl'
 import '@formatjs/intl-datetimeformat/locale-data/no'
+import '@formatjs/intl-datetimeformat/locale-data/pl'
 import '@formatjs/intl-datetimeformat/locale-data/pt'
 import '@formatjs/intl-datetimeformat/locale-data/sv'
 import '@formatjs/intl-datetimeformat/locale-data/uk'
@@ -97,6 +101,7 @@ import '@formatjs/intl-relativetimeformat/locale-data/ja'
 import '@formatjs/intl-relativetimeformat/locale-data/ko'
 import '@formatjs/intl-relativetimeformat/locale-data/nl'
 import '@formatjs/intl-relativetimeformat/locale-data/no'
+import '@formatjs/intl-relativetimeformat/locale-data/pl'
 import '@formatjs/intl-relativetimeformat/locale-data/pt'
 import '@formatjs/intl-relativetimeformat/locale-data/sv'
 import '@formatjs/intl-relativetimeformat/locale-data/uk'
@@ -124,6 +129,7 @@ i18n.use(initReactI18next).init({
     ko,
     nl,
     no,
+    pl,
     'pt-BR': pt_BR,
     sv,
     uk,
