@@ -1,3 +1,4 @@
 toooting愉快！此版本包括以下改进和修复：
 - 添加neodb.social书影音展示卡片
 - 新增巴斯克语
+- 新增波兰语
