@@ -1,2 +1,3 @@
 Enjoy toooting! This version includes following improvements and fixes:
 - Added Basque language
+- Added Polish language
